@@ -7,6 +7,7 @@
 * Adding #117 support for text based burn in subtitles
 * Adding #152 option to switch back to old bubbly buttons (thanks to GitKike98)
 * Adding logging level selector in settings for GUI
+* Adding button to extract text based subtitles
 * Fixing #156 Copy was broken due to ffmpeg extras not being passed (thanks to leonardyan)
 * Fixing #158 Translation and icon of tab name "Quality" lost when output codec switched (thanks to leonardyan)
 * Fixing snap packaged, and other symlinked FFmpeg installs were not linked correctly (thanks to Catatau)
